force-app/main/default/objects/maps__LiveAsyncError__c/maps__LiveAsyncError__c.object-meta.xml
<CustomObject>
    <label>Maps Live Async Error</label>
    <nameField>
        <displayFormat>MAPS_ERROR {000000}</displayFormat>
        <label>Maps Live Async Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Async Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>