force-app/main/default/objects/maps__LiveAsyncError__c/fields/maps__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>maps__LineNumber__c</fullName>
    <label>Line Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>