force-app/main/default/objects/maps__LiveAsyncError__c/fields/maps__LiveDailySummaryConfig__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveDailySummaryConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the summary that had errors</description>
    <inlineHelpText>Reference to the summary that had errors</inlineHelpText>
    <label>Live Daily Summary Config</label>
    <referenceTo>maps__LiveDailySummaryConfig__c</referenceTo>
    <relationshipLabel>Live Async Errors</relationshipLabel>
    <relationshipName>LiveAsyncErrors</relationshipName>
    <type>Lookup</type>
</CustomField>