force-app/main/default/objects/maps__LiveAsyncError__c/fields/maps__ObjectFieldValues__c.field-meta.xml
<CustomField>
    <fullName>maps__ObjectFieldValues__c</fullName>
    <description>The entire sObject in JSON format, if available.</description>
    <inlineHelpText>The entire sObject in JSON format, if available.</inlineHelpText>
    <label>Object Field Values</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>