force-app/main/default/objects/maps__LiveAsyncError__c/fields/maps__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>maps__ObjectId__c</fullName>
    <description>The Id of the sObject on which this error occurred.</description>
    <inlineHelpText>The Id of the sObject on which this error occurred.</inlineHelpText>
    <label>Object Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>