force-app/main/default/objects/maps__LiveAsyncError__c/fields/maps__ReportDate__c.field-meta.xml
<CustomField>
    <fullName>maps__ReportDate__c</fullName>
    <description>This date represents the specific Summary date MAIO was requested to return, not the date the request was run.</description>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>