force-app/main/default/objects/maps__LiveAsyncError__c/fields/maps__SobjectType__c.field-meta.xml
<CustomField>
    <fullName>maps__SobjectType__c</fullName>
    <label>Sobject Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>