force-app/main/default/objects/maps__LiveAsyncError__c/fields/maps__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>maps__StackTrace__c</fullName>
    <description>The value of the stack trace received.</description>
    <inlineHelpText>The value of the stack trace received.</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>