force-app/main/default/objects/maps__LiveAsyncError__c/fields/maps__Subject__c.field-meta.xml
<CustomField>
    <fullName>maps__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>